--- a/my-NewProject/src/app/login/login.component.html
+++ b/my-NewProject/src/app/login/login.component.html
@@ -1,21 +1,21 @@
-<div class="container">
-    <div class="row">
-        <div class="col-md-6 col-md-offset-4">
+<div class="jumbotron">
+    <div class="container">
+        <div class="col-sm-8 col-sm-offset-2">
             <h2>Login</h2>
             <form>
+                    <div class="form-group">
+                            <label for="username">Username</label>
+                            <input type="text" class="form-control" name="username"/>
+                        </div>
+                        <div class="form-group">
+                            <label for="password">Password</label>
+                            <input type="password" class="form-control" name="password"/>
+                        </div>
                 <div>
-                    <label for="username">Username</label>
-                    <input type="text" name="username" />
-                </div>
-                <div>
-                    <label for="password">Password</label>
-                    <input type="password" name="password" />
-                </div>
-                <div>
-                    <button (click)="loginButton()">Login</button>
+                    <button class="btn btn-primary" (click)="loginButton()">Login</button>                   
                 </div>
             </form>
         </div>
     </div>
 </div>
-
+ 
