--- a/my-NewProject/src/app/login/login.component.html
+++ b/my-NewProject/src/app/login/login.component.html
@@ -2,17 +2,20 @@
     <div class="container">
         <div class="col-sm-8 col-sm-offset-2">
             <h2>Login</h2>
-            <form>
+            <form (submit) = "loginUser($event)">
                     <div class="form-group">
                             <label for="username">Username</label>
-                            <input type="text" class="form-control" name="username"/>
+                            <input type="text" class="form-control" name="username" placeholder="Username"/>
                         </div>
                         <div class="form-group">
                             <label for="password">Password</label>
-                            <input type="password" class="form-control" name="password"/>
+                            <input type="password" class="form-control" name="password" placeholder="Password"/>
                         </div>
                 <div>
-                    <button class="btn btn-primary" (click)="loginButton()">Login</button>                   
+                    <div class = "input">
+                        <input type="submit" value = "login">
+                    </div>
+                    <!-- <button class="btn btn-primary" (click)="loginButton()">Login</button>                    -->
                 </div>
             </form>
         </div>
