--- a/my-NewProject/src/assets/images/header.component.scss
+++ b/my-NewProject/src/assets/images/header.component.scss
@@ -11,7 +11,7 @@
 	z-index: 2;
 }
 .headerbg{
-	background: #efefef;
+	background: #291F1F;
 	border-bottom: 1px solid #999999;
 	min-height: 64px;
 }
@@ -26,7 +26,7 @@
 .sidebar-toggle span {
     width: 28px;
     height: 3px;
-    background: #000;
+    background: #3A2222;
     display: block;
     margin-bottom: 4px;
     border-radius: 2px;
