--- a/my-NewProject/src/app/login/login.component.html
+++ b/my-NewProject/src/app/login/login.component.html
@@ -1,6 +1,12 @@
-<div class="jumbotron">
-    <div class="container">
-        <div class="col-sm-8 col-sm-offset-2">
+<div class="section-wrpr bottom-space">
+<div class="login-body">
+    <div class="wrapper">
+        <div id="login-container">
+            <div class="login-box">
+                <div class="loginbg">
+                    <div class="logo-wrapper">
+                        <img src="./assets/images/download.png"/>
+                    </div>
             <h2>Login</h2>
             <form (submit) = "loginUser($event)">
                     <div class="form-group">
@@ -21,4 +27,8 @@
         </div>
     </div>
 </div>
+        </div>
+    </div>
+
+
  
