--- a/my-NewProject/src/app/dashboard/dashboard.component.html
+++ b/my-NewProject/src/app/dashboard/dashboard.component.html
@@ -1,32 +1,14 @@
-<header>
-  Welcome to login page 
-  <a class="col-sm-9 float-right" [routerLink]="['/login']">Logout</a>
-</header>
-<!-- <div class="section-wrpr bottom-space">
-    <div class="section-label box-border-bottom">
-        <div class="income-header">BASIC INFORMATION</div>
-    </div>
-    <div class="box-border-bottom row-view">
-        <!--form-group -->
-        <!-- <div class="col-sm-3 zero-padding-Right pushDown">
-            <label for="Demographic">Demographics</label>
-        </div>
 
-        
-        <div class="clearfix"></div>
-    </div>
-</div> -->
-<nav>
-<ul>
-    <li>
-        <a>Home</a> 
-    </li>
-    <li (click)="loginButton()">
-        <a>About</a>
-    </li>
-    <li>
-        <a>Contact</a>
-    </li>
-</ul>
-</nav>
+<div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset2">
+    <input type="text" #servername>
+    <button class="btn btn-primary" (click)="onAddServer(serverName.value)">Add Server</button>
+    <hr>
+    <br>
+    <button class="btn btn-primary" (click)="onSave()">Save Servers</button>
+    <button class="btn btn-primary" (click)="onGet()">Get Servers</button>
+
+    <ul class="list-group" *ngFor="let server of servers">
+        <li class="list-group-item">{{ server.name }} (ID: {{ server.id }})</li>
+    </ul>
+</div>
 
