--- a/my-NewProject/src/app/app.component.html
+++ b/my-NewProject/src/app/app.component.html
@@ -1,6 +1,6 @@
 <header>
-    Welcome to login page 
-    <a class="col-sm-9 float-right" [routerLink]="['/login']">Logout</a>
+    Welcome to Info page
+    <a class="col-sm-2 float-right" [routerLink]="['/login']">Logout</a>
   </header>
   <!-- <div class="section-wrpr bottom-space">
       <div class="section-label box-border-bottom">
