--- a/my-NewProject/src/app/dashboard/dashboard.component.html
+++ b/my-NewProject/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-
+<!-- 
 <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset2">
     <input type="text" #servername>
     <button class="btn btn-primary" (click)="onAddServer(serverName.value)">Add Server</button>
@@ -10,5 +10,5 @@
     <ul class="list-group" *ngFor="let server of servers">
         <li class="list-group-item">{{ server.name }} (ID: {{ server.id }})</li>
     </ul>
-</div>
+</div> -->
 
